[project]
name = "arapunct2"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirill Chirkunov",email = "kirill.chirkunov@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch (==2.5.1)",
    "transformers (>=4.51.3,<5.0.0)",
    "huggingface-hub (>=0.30.2,<0.31.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "protobuf (>=6.30.2,<7.0.0)",
    "datasets (==3.3.2)",
    "accelerate (==1.4.0)",
    "evaluate (==0.4.3)",
    "bitsandbytes (==0.45.3)",
    "trl (==0.15.2)",
    "peft (==0.14.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "flash-attn (==1.0.5)",
]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
